# Telemetry

./: .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  Makefile  README.md
Dashboards/: Diagnostic-1690344337580.json  Stack 5-1690344410919.json  Stack 6-1690344482541.json  Stack-1.json  Stack-2(1).json  Stack-3.json  Stack-4.json  VCU-1690344263481.json
How it works/: Architecture.md  Backend.md  Docker.md  Grafana.md
backend/: .dockerignore  Dockerfile  __init__.py  pyproject.toml
backend/eventhook/: __main__.py
backend/eventpersister/: __main__.py
backend/metrics/: __main__.py
backend/metrics/listeners/: __init__.py  error.py  setup.py
backend/metrics/routes/: __init__.py  healthcheck.py  metrics.py  streaming_ws.py  views.py
backend/metrics/serialization/: metrics.py
backend/metrics/util/: validation.py
backend/metrics/views/: __init__.py  car_map.py  view.py
backend/metrics/websocket/: subscriptions_manager.py
backend/scripts/: decode.json  gen.py  insert_many_http.py  pyproject.toml  test_udp.py  test_websocket.py
backend/shared/config/: __init__.py  event.py  metrics.py  metrics.yml  redis.py
backend/shared/process/: killer.py
backend/shared/schema/: __init__.py  validator.py
backend/shared/schema/request/: gethistory.parameters.yml  view.car-map.parameters.yml
backend/shared/schema/rules/: namespace.yml
backend/shared/store/: redis.py  store.py
compose/: backend.dev.yml  backend.yml  grafana.dev.env  grafana.dev.yml  grafana.yml
grafana/: Dockerfile
scripts/: .gitignore  build.sh  dev-setup.sh  push.sh  (+3 more)
(+27 files in other folders)
